--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["0d:a0:d2:30:e7:40:31:70:0e:69:45:04:ad:36:0b:8c"]
+          fingerprints: ["06:8a:19:09:dc:84:78:6d:8b:06:c7:77:ab:cf:70:d9"]
       # - run:
       #     name: "Install Dependencies"
       #     command: |
@@ -204,8 +204,8 @@ jobs:
             cd .circleci/ansible
             aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text >> inventory.txt
             cat inventory.txt
-            # ansible-playbook -i inventory.txt configure-server.yml -vv
-            ansible-playbook -i inventory.txt prometheus-exporter.yml -vv
+            ansible-playbook -i inventory.txt configure-server.yml -vv
+            # ansible-playbook -i inventory.txt prometheus-exporter.yml -vv
       # Here's where you will add some code to rollback on failure      
 
   run-migrations:
