--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: "configuration play." 
+#- name: "configuration play." 
 #  hosts: web
 #  user: ubuntu
 #  become: true
@@ -29,7 +29,7 @@
 #  roles:
     # Your code here
     # - configure-server
-    - configure-prometheus-node-exporter
+#    - configure-prometheus-node-exporter
 
  #---
 
